--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="12dp"
         android:background="#00FFFEFE"
         android:backgroundTint="#FFFFFF"
         android:contentDescription="Toggle buttons"
@@ -38,7 +38,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="12dp"
         android:background="#00FFFEFE"
         android:backgroundTint="#FFFFFF"
         android:contentDescription="Flashlight button"
@@ -56,7 +56,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="12dp"
         android:background="#00FFFEFE"
         android:backgroundTint="#FFFFFF"
         android:contentDescription="Zoom button"
@@ -74,7 +74,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:background="#00FFFFFF"
         android:contentDescription="Red filter button"
         android:onClick="redButtonClick"
@@ -89,7 +89,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:background="#00FFFFFF"
         android:contentDescription="Green filter button"
         android:onClick="greenButtonClick"
@@ -104,7 +104,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:background="#00FFFFFF"
         android:contentDescription="Blue Filter button"
         android:onClick="blueButtonClick"
@@ -119,7 +119,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:background="#00FFFFFF"
         android:contentDescription="Blue Filter button"
         android:onClick="noButtonClick"
@@ -128,6 +128,35 @@
         app:layout_constraintTop_toBottomOf="@+id/imageButtonBlueFilter"
         app:srcCompat="@drawable/baseline_circle_24"
         app:tint="#99FFFFFF" />
+
+    <ImageButton
+        android:id="@+id/imageButtonFilterAim"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:background="#00FFFFFF"
+        android:contentDescription="No filter"
+        android:onClick="toggleAutoFilter"
+        android:scaleType="fitCenter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButtonNoFilter"
+        app:srcCompat="@drawable/baseline_auto_mode_24"
+        app:tint="#99FFFFFF" />
+
+    <ImageView
+        android:id="@+id/imageViewAutoFilterAim"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="Automatic filter button"
+        android:foregroundTint="#FFFFFF"
+        android:tint="#B0FFFFFF"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/color_blob_detection_activity_surface_view"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/baseline_add_circle_outline_24" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
